# memoscript

./: pyproject.toml
memoscript/: 000.py  New Empty File  New Text File 1.txt  New Text File.txt  README.md  add-card.py  add2deck.sh  add2deck1.sh  add_card.py  asd.db  asd.py  asd2.db  asd2.py  asd3.db  asdasd.py  common.py  create-deck.py  create-deck.sh  create-mod.py  create_card.py  create_db.py  create_deck.py  create_deck.sh  create_decks.sh  create_mod.py  create_template.py  delete-card.py  delete-mod.py  delete_card.py  delete_mod.py  delete_template.py  drop-taskperday.py  drop_taskperday.py  elements.txt  funtions_test.py  get_mod_table.py  inf-memo.py  inf_memo.py  khjgng.db  khjgng.py  (+21 more)
memoscript/decks/: asd2.db  asd3.db  capitals.db  countries.db  elements.db  foo.db  months.db  orthography.db  quaternions.db  test.db  test_common.db  test_deck.db
memoscript/decks/math/: octonions.db  quaternions.db
memoscript/decksss/: quaternions.db
tests/: test.py
